# advent-of-code-2024

./: README.md
.github/workflows/: codspeed.yml
aoc24/: Cargo.toml
aoc24/benches/: bench.rs
aoc24/src/: aoc1.rs  aoc2.rs  day1.rs  day2.rs  day3.rs  main.rs
