[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"

[dev-dependencies]
codspeed-criterion-compat = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "bench"
harness = false